# automation-testing-v2

./: .env.example  .gitignore  README.md  automation-testing-e2e.sln  docker-compose.yml  index.html
.github/workflows/: ci.yml  release.yml
backend/: .env.example  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  project.py  scenario.py  step.py  step_result.py  test_case.py  test_run.py
backend/app/routers/: __init__.py  ai.py  integrations.py  mobile.py  projects.py  scenarios.py  services.py  step_results.py  steps.py  test_cases.py  test_runner.py  test_runs.py
backend/app/services/: test_runner.py
docs/: CODE_SIGNING.md
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/e2e/: app.spec.ts  projects.spec.ts  runs.spec.ts  scenarios.spec.ts  test-cases.spec.ts
frontend/electron/: electron.d.ts  main.js  preload.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/scripts/: ios_touch.py
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: adb.rs  ai.rs  ios.rs  mod.rs  project.rs  scenario.rs  services.rs  step.rs  test_case.rs  test_run.rs
frontend/src-tauri/src/db/: migrations.rs  mod.rs
frontend/src-tauri/src/models/: mod.rs  project.rs  scenario.rs  step.rs  test_case.rs  test_run.rs
frontend/src-tauri/src/services/: ai_agent.rs  events.rs  health.rs  integrations.rs  manager.rs  mod.rs  test_runner.rs
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/loading/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/test-cases/: page.tsx
frontend/src/components/: app-shell.tsx  mobile-preview.tsx
frontend/src/components/scenario-builder/: config-panel.tsx  index.ts  preview-panel.tsx  steps-panel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  chip.tsx  empty-state.tsx  error-boundary.tsx  index.ts  input.tsx  modal.tsx  select.tsx  sidebar.tsx  skeleton.tsx  spinner.tsx  tabs.tsx  toast.tsx
frontend/src/contexts/: project-context.tsx
frontend/src/lib/: api.ts  tauri.ts
frontend/src/stores/: project.ts
frontend/src/types/: database.ts
infra/docker/: ai-agent.Dockerfile  core-api.Dockerfile  frontend.Dockerfile  test-runner.Dockerfile
scripts/: dev.sh  init-db.sh  main.js
services/ai-agent/: Dockerfile  pyproject.toml  requirements.txt
services/ai-agent/src/: __init__.py  config.py  main.py
services/ai-agent/src/agents/: __init__.py  analyzer.py  generator.py  requirements_parser.py  scenario_builder.py
services/ai-agent/src/api/: routes.py  schemas.py
services/ai-agent/src/prompts/: __init__.py  analysis.py  generation.py
services/ai-agent/src/tasks/: __init__.py  celery_app.py  job_store.py
services/core-api/: .env.example  Cargo.toml
services/core-api/src/: config.rs  error.rs  main.rs
services/core-api/src/db/: mod.rs  pool.rs
services/core-api/src/db/migrations/: 001_create_users.sql  002_create_projects.sql  003_create_test_cases.sql  004_create_scenarios.sql  005_create_steps.sql  006_create_executions.sql
services/core-api/src/handlers/: auth.rs  mod.rs  projects.rs  scenarios.rs  test_cases.rs
services/core-api/src/middleware/: auth.rs
services/core-api/src/models/: mod.rs  project.rs  scenario.rs  step.rs  test_case.rs  user.rs
services/test-runner/: .env.example  .gitignore  Dockerfile  cypress.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
services/test-runner/cypress/fixtures/: example.json
services/test-runner/cypress/support/: commands.ts  e2e.ts  self-healing.ts
services/test-runner/data/: executions.json
services/test-runner/src/: config.ts  index.ts
services/test-runner/src/api/: routes.ts
shared/schemas/: project.json  scenario.json  step.json
styles/: components.css  global.css  layout.css  variables.css
(+21 files in other folders)
