[package]
name = "autotest-ai"
version = "1.0.0"
description = "AI-powered test automation tool"
authors = ["AutoTest AI"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "autotest_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }

# Async support for Tauri
thiserror = "1"
directories = "5"

# HTTP client for service communication (using rustls for cross-platform support)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Process management
sysinfo = "0.32"

# WebSocket client for real-time updates (using rustls for Android/iOS)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Base64 encoding for screenshots
base64 = "0.22"

# Environment variable loading from .env file
dotenvy = "0.15"

# Regex for UI dump parsing
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
