[package]
name = "core-api"
version = "0.1.0"
edition = "2021"
authors = ["Automation Testing Team"]
description = "Core API service for E2E automation testing platform"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
argon2 = "0.5"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
